2015-06-25  Andrew MacLeod  <amacleod@redhat.com>

	* function.h (struct incoming_args): Move struct.
	(pass_by_reference, reference_callee_copied): Remove prototypes.
	* emit-rtl.h (struct incoming_args): Relocate struct here.
	* calls.h (pass_by_reference, reference_callee_copied): Relocate
	prototypes here.
	* function.c (pass_by_reference, reference_callee_copied): Move.
	* calls.c (pass_by_reference, reference_callee_copied): Relocate here.
	* cfgloop.h: Don't include tm.h or hard-reg-set.h.
	* ipa-chkp.c: Include calls.h.

2015-06-25  Andrew Macleod  <amacleod@redhat.com>

	* alias.h (alias_set_type): Move typedef.
	* coretypes.h (alias_set_type): Relocate typedef here.
	* rtl.h: Don't include alias.h.

2015-06-25  Andrew MacLeod  <amacleod@redhat.com>

	* cgraph.h (cgraph_rtl_info): Move to rtl.h
	(cgraph_node): Maintain pointer to struct cgraph_rtl_info instead of
	and instance.
	* rtl.h (struct cgraph_rtl_info): Define when HARD_REG_SET available.
	* cgraph.c (cgraph_node::rtl_info): Allocate cgraph_rtl_info if one
	doesn't exist.
	* calls.c: Include hard-reg-set.h before rtl.h.
	* ira.c: Likewise.

2015-06-25  Zhouyi Zhou  <yizhouzhou@ict.ac.cn>
	    Vladimir Makarov  <vmakarov@redhat.com>

	* ira-color.c (assign_hard_reg): Remove unecessary bitmap check.
	Add assert.

2015-06-25  Richard Biener  <rguenther@suse.de>

	* fold-const.c (fold_binary_loc): Move simplification of
	(X <<>> C1) & C2 ...
	* match.pd: ... here.

2015-06-25  Eric Botcazou  <ebotcazou@adacore.com>

	* lto-streamer-out.c (DFS::hash_scc): Fix typos & formatting glitches.

2015-06-25  Richard Sandiford  <richard.sandiford@arm.com>

	* match.pd: Add patterns for vec_conds between 1 and 0.

2015-06-25  Richard Biener  <rguenther@suse.de>

	* tree-vect-stmts.c (vectorizable_conversion): Do not set
	STMT_VINFO_VEC_STMT for SLP.
	(vectorizable_store): Likewise.
	(vectorizable_load): Likewise.
	(vect_transform_stmt): Catch SLP vectorization clobbering
	STMT_VINFO_VEC_STMT.
